--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+colorlog==6.9.0
 ghp-import==2.1.0
 idna==3.10
 jinja2==3.1.6
