--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ csscompressor==0.9.5
 cssselect2==0.8.0
 defusedxml==0.7.1
 filelock==3.15.4
+frontmatter==3.0.8
 ghp-import==2.1.0
 gitdb==4.0.10
 gitpython==3.1.44
@@ -36,8 +37,8 @@ mkdocs-git-revision-date-localized-plugin==1.4.7
 mkdocs-material==9.6.14
 mkdocs-material-extensions==1.3.1
 mkdocs-minify-plugin==0.7.1
-mkdocs-redirects==1.2.1
 mkdocs-obsidian-interactive-graph-plugin==0.3.0
+mkdocs-redirects==1.2.1
 mkdocs-rss-plugin==1.17.3
 mkdocstrings==0.30.0
 mkdocstrings-python==1.16.12
@@ -53,7 +54,7 @@ pymdown-extensions==10.15
 pypinyin==0.51.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pyyaml==6.0.2
+pyyaml==5.1
 pyyaml-env-tag==1.1
 regex==2024.11.6
 requests==2.32.3
