--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,12 @@ description = ""
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "pytest-cov",
+]
+
+[project.scripts]
+test = "pytest-cov"
