--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 colorlog==6.9.0
+coverage==7.10.6
 csscompressor==0.9.5
 cssselect2==0.8.0
 defusedxml==0.7.1
@@ -21,6 +22,7 @@ gitpython==3.1.44
 griffe==1.9.0
 htmlmin2==0.1.13
 idna==3.10
+iniconfig==2.1.0
 jieba==0.42.1
 jinja2==3.1.6
 jsmin==3.0.1
@@ -48,10 +50,13 @@ paginate==0.5.7
 pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.3.8
+pluggy==1.6.0
 pycparser==2.22
 pygments==2.19.1
 pymdown-extensions==10.15
 pypinyin==0.51.0
+pytest==8.4.2
+pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyyaml==5.1
