--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 license = "GPL-3.0-or-later"
-license-files = ["LICENSE*"]
+license-files = ["LICENSE"]
 dependencies = [
     "babel==2.17.0",
     "backrefs==5.8",
