fix: refactor the cli of the plugin in order to avoid conflict with MkDocs itself
- abstract cli.py as an independent module
- renew readme of it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ test = [
 ]
 
 [project.scripts]
+mkdocs-note = "mkdocs_note.cli:cli"
 
 [project.entry-points."mkdocs.plugins"]
 mkdocs-note = "mkdocs_note.plugin:MkdocsNotePlugin"
