fix: add an config option to choose timezone that fix the issue in #16
- **Timestamp Configuration**: Added `timestamp_zone` configuration option (default: `UTC+0`) to ensure consistent timestamp display across different deployment environments

  - Implemented automatic fallback to UTC timezone when invalid timezone format is provided

  - Added comprehensive documentation for timestamp configuration options

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,11 +109,9 @@ plugins:
       #   - assets/stylesheets/
   - git-revision-date-localized:
       enable_creation_date: true
-  - mkdocstrings
-  - drawio
   - mkdocs-note:
       notes_dir: docs/notes
-
+      timestamp_zone: "UTC+8"
 
 
   # - redirects:
