--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "mkdocs-note"
-version = "1.1.2"
+version = "1.1.3"
 description = "A MkDocs plugin to add note boxes to your documentation."
 readme = "README.md"
 requires-python = ">=3.12"
@@ -26,6 +26,10 @@ Issues = "https://github.com/virtualguard101/mkdocs-note/issues"
 dev = [
     "pytest",
     "pytest-cov",
+    "mkdocs-material>=9.6.4",
+    "mkdocs-minify-plugin>=0.8.0",
+    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
+    "pymdown-extensions>=10.0",
 ]
 test = [
     "pytest-cov",
