--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@
 mkdocs>=1.6.1
 colorlog>=6.9.0
 
+# MkDocs plugins and extensions required by mkdocs.yml
+mkdocs-material>=9.6.4
+mkdocs-minify-plugin>=0.8.0
+mkdocs-git-revision-date-localized-plugin>=1.4.0
+pymdown-extensions>=10.0
+
 # Development and testing dependencies
 pytest>=8.4.2
 pytest-cov>=6.2.1
