--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_author: virtualguard101{}
 # site_description: >-
 #   Write your documentation in Markdown and create a professional static site in
 #   minutes – searchable, customizable, in 60+ languages, for all devices
-site_name: Mkdocs Note
+site_name: Mkdocs-Note
 site_url: https://blog.virtualguard101.com/mkdocs-note
 repo_url: https://github.com/virtualguard101/mkdocs-note
 repo_name: virtualguard101/mkdocs-note
@@ -110,7 +110,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
   - mkdocs-note:
-      notes_dir: docs/notes
+      notes_dir: "docs/usage"
       timestamp_zone: "UTC+8"
 
 
@@ -125,7 +125,6 @@ extra_javascript:
 hooks:
   - scripts/hooks/rss.py
   - scripts/hooks/fancybox.py
-  - scripts/hooks/links.py
   - scripts/hooks/copyright.py
   # - src/mkdocs_note/plugin.py
   # - scripts/hooks/
@@ -214,7 +213,6 @@ extra:
 ## Page tree
 nav:
   - index.md
-  - notes/index.md
         
   - Blog:
     - blog/index.md
