--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ pyyaml>=6.0,
 
 # MkDocs plugins and extensions required by mkdocs.yml
 mkdocs-material>=9.6.4
+mkdocs-material-extensions>=1.3.1
 mkdocs-minify-plugin>=0.8.0
 mkdocs-git-revision-date-localized-plugin>=1.4.0
 pymdown-extensions>=10.0
