docs: init docs for starting build mkdocs-based docs (#32)
- move template default path into `overrides`

- add `getting-started` and `setup`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,7 +110,7 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
   - mkdocs-note:
-      notes_dir: "docs/usage"
+      notes_dir: "docs"
       timestamp_zone: "UTC+8"
 
 
