--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -216,10 +216,11 @@ nav:
         
   - Blog:
     - blog/index.md
-  - Credits: credits.md
+  - Changelog: changelog.md
   - Troubleshooting Guide: troubleshooting.md
   - Contributing Guide: contributing.md
   - Architecture Intro in Chinese: architecture.md
+  - Credits: credits.md
 
 not_in_nav: |
   templates/
