chore: fix the issue that the hot-reload dosen't work (#35)
By pinned the version of `click` at `v8.2.1` in the env dev option-dependencies temporarily.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ Issues = "https://github.com/virtualguard101/mkdocs-note/issues"
 
 [project.optional-dependencies]
 dev = [
+    "click==8.2.1",
     "pytest",
     "pytest-cov",
     "mkdocs-material>=9.6.4",
