--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,9 +110,8 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: true
   - mkdocs-note:
-      notes_dir: "docs"
       timestamp_zone: "UTC+8"
-
+      log_level: debug
 
   # - redirects:
   #     redirect_maps:
