--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -218,7 +218,7 @@ nav:
     - usage/index.md
 
   - Contributing Guide:
-    - contributing/index.md
+    - contributing/contributing.md
     - Architecture Documentation: contributing/architecture.md
 
   - API Reference:
