--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "mkdocs-jupyter>=0.25.1",
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-git-revision-date-localized-plugin>=1.4.0",
+    "mkdocs-awesome-nav>=3.2.0",
 ]
 
 [project.urls]
@@ -38,7 +39,6 @@ dev = [
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-git-revision-date-localized-plugin>=1.4.0",
     "pymdown-extensions>=10.0",
-    "mkdocs-material==9.6.4"
 ]
 
 test = [
