feat: setup pre-commit hook - add ruff check and format pre-commit hook - add bootstrap task in `justfile` - update project depedences in `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "mkdocs-jupyter>=0.25.1",
     "mkdocs-minify-plugin>=0.8.0",
     "mkdocs-git-revision-date-localized-plugin>=1.4.0",
+    "pre-commit>=4.3.0",
+    "pytest>=8.4.2",
 ]
 
 [project.urls]
