chore: imrove ci config

--- a/.github/ghpg.yml
+++ b/.github/ghpg.yml
@@ -7,21 +7,15 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-  steps:
-      - name: Configure Git Credentials
-        run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: astral-sh/setup-uv@v6
-      - run: uv sync
-      - run: uv run mkdocs gh-deploy --force
-
-
-      - uses: actions/checkout@v5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
 
       - name: Install uv
         uses: astral-sh/setup-uv@v6
@@ -30,3 +24,14 @@ jobs:
         run: uv python install
         with:
           python-version-file: ".python-version"
+
+      - name: Install dependencies
+        run: uv sync
+
+      - name: Configure Git Credentials
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+
+      - name: Deploy to GitHub Pages
+        run: uv run mkdocs gh-deploy --force
