--- a/.github/workflows/ghpg.yml
+++ b/.github/workflows/ghpg.yml
@@ -17,11 +17,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: ".python-version"
+
       - name: Install uv
         uses: astral-sh/setup-uv@v6
-
-      - name: Set up Python
-        run: uv python install --python-version-file .python-version
 
       - name: Install dependencies
         run: uv sync
