docs: update docs

--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -10,6 +10,7 @@ nav:
     - Command Line Interface: usage/cli.md
     - Asset Management: usage/asset-manager.md
     - Templating System: usage/templating.md
+    - Network Graph Visualization: usage/network-graph.md
     - Exclusion: usage/exclusion.md
     - Configuration Options: usage/config.md
     - Some Security Considerations: usage/sec.md
