--- a/.github/workflows/ghpg.yml
+++ b/.github/workflows/ghpg.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+        with:
+          fetch-depth: 0  # Fetch full git history for accurate timestamps
 
       - name: "Set up Python"
         uses: actions/setup-python@v5
