fix: fix 2 issue in plugin module
- Fixed issue where recent notes were note inserted into index page if
  notes_root was not default value `docs`.

- Fixed issue that cannot copy static assert to output dir which cause
  link graph not working

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include LICENSE
 include README.md
-recursive-include src/mkdocs_note/utils/graphps/static *
+recursive-include src/mkdocs_note/static *
