--- a/docs/.nav.yml
+++ b/docs/.nav.yml
@@ -10,7 +10,7 @@ nav:
     - Command Line Interface: usage/cli.md
     - Asset Management: usage/asset-manager.md
     - Network Graph Visualization: usage/network-graph.md
-    - Configuration Options: usage/config.md
+    # - Configuration Options: usage/config.md
 
   - Contributing Guide:
     - contributing/contributing.md
